# N-SLMCRS

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.kernel  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/gateway/: main.go
deploy/: install.sh  n-slmcrs.service
docs/specs/: 2026-06-19-n-slmcrs-design.md
internal/admin/: admin.go  admin_test.go  autopilot.go  backup.go  hooks.go  playground.go  settings.go  settings_test.go  strategy.go
internal/agent/: backend.go  react.go  tool.go  trace.go
internal/autopilot/: adaptive.go  adaptive_test.go  controller.go  controller_test.go  executor.go  executor_test.go  forecast.go  kernel_client.go  kernel_client_test.go  llm.go  llm_agent_test.go  llm_gateway.go  llm_gateway_test.go  llm_tools.go  reason.go  runtime.go  runtime_test.go  tier.go  tier_test.go  types.go
internal/backup/: backup.go  backup_test.go
internal/config/: config.go
internal/data/: audit.go  channels.go  keys.go  keys_test.go  logs.go  metrics.go  model_circuit.go  model_circuit_test.go  models.go  models_health_test.go  probes.go  schema.sql  settings.go  specs.go  specs_test.go  store.go
internal/entry/: convert.go  convert_test.go  entry.go  errors.go  static.go
kernel-rs/: Cargo.toml
kernel-rs/src/: compute.rs  main.rs  report.rs  reserve.rs  state.rs  store.rs  strategy.rs  testsupport.rs
scripts/: deploy.sh  load-test.py  sync-models.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+59 files in other folders)
