[package]
name = "nslmcrs-kernel"
version = "0.12.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# v0.12：控制面权威化——熔断器态 + 子决策审计持久化到自有 SQLite。
# bundled 静态编译 SQLite，alpine 运行时无需系统 lib。
rusqlite = { version = "0.31", features = ["bundled"] }
# v0.12：/reserve 加权随机排列（复刻 scheduler.weightedShuffle）。
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
